--- a/15-03.Mai/content/diskussion.tex
+++ b/15-03.Mai/content/diskussion.tex
@@ -1,13 +1,25 @@
 \section{Diskussion}
 \label{sec:Diskussion}
 
-Die berechneten Exponenten aus dem Kapitel (\ref{sec:K}) weichen von dem Referenzwert $I = 1.5$, aus der Gleichung (\ref{eqn:jLS}), um
+Die berechneten Exponenten aus dem Kapitel (\ref{sec:K}) weichen von dem Referenzwert $x = 1.5$, aus der Gleichung (\ref{eqn:jLS}), um
 \begin{align*}
-  \text{Exponent von}\ & I_1 = \num{1.379 +- 0.001} \ , \\
-  \text{Abweichung vom Referenzwert:}\ & \frac{I - I_1}{I_1} \cdot 100 = 8.77\% \\
-  \text{Exponent von}\ & I_2 = \num{1.345 +- 0.002} \\
-  \text{Abweichung vom Referenzwert:}\ & \frac{I - I_2}{I_2} \cdot 100 = 11.52\%
+  & x_1 = \num{1.379 +- 0.001} \\
+  \text{Abweichung:}\ & \frac{\vert x - x_1 \vert }{x} \cdot 100 = 8.07\, \% \\
+  & x_2 = \num{1.345 +- 0.002} \\
+  \text{Abweichung:}\ & \frac{\vert x - x_2 \vert}{x} \cdot 100 = 10.33\, \%
 \end{align*}
 ab. \\
-Die Kathodentemperaturen aus den Kapiteln (\ref{sec:A}) und (\ref{sec:L}) stimmen in der Größenordnung überein und können somit als gelungene Messungen betrachtet werden. \\
-Der errechnete Mittelwert der Austrittsarbeit für Wolfram beträgt 4.782 eV und weicht damit um 5.8 \% von dem Literaturwert ab. Der Literaturwert für die Austrittsarbeit beträgt 4.54 eV (\cite{Wolfram}).
+Die Kathodentemperatur aus dem Kapiteln (\ref{sec:A}) beträgt
+\begin{align*}
+  T = (\num{2700 +- 80}) \, \text{K}
+\end{align*}
+und aus dem Kapitel (\ref{sec:L}) betragen die Kathodentemperaturen
+\begin{align*}
+  T_1 = 2310\, \text{K} \\
+  T_2 = 2265\, \text{K} \\
+  T_3 = 2051\, \text{K} \\
+  T_4 = 1951\, \text{K} \\
+  T_5 = 1870\, \text{K} \\
+\end{align*}
+Die Kathodentemperaturen weichen zwischen $\frac{\vert T - T_1 \vert}{T} \cdot 100 = 14.44\,\%$ und $\frac{\vert T - T_2 \vert}{T} \cdot 100 = 30.74\,\%$ voneinander ab.\\
+Der errechnete Mittelwert der Austrittsarbeit für Wolfram aus Kapitel \eqref{sec:AfW} beträgt ($\num{4.78 +- 0.08}$) eV und weicht damit um 5.33\,\% von dem Literaturwert ab. Der Literaturwert für die Austrittsarbeit beträgt 4.54 eV (\cite{Wolfram}).
