--- a/14-26.April/content/durchfuehrung.tex
+++ b/14-26.April/content/durchfuehrung.tex
@@ -18,4 +18,4 @@ Zu Beginn wird ein fester Abstand $e$ zwischen dem Gegenstand und dem Schirm gew
 Um die chromatische Abberation zu untersuchen, werden für jeweils fünf Abstände $e$, ein roter und ein blauer Filter vor den Gegenstand gesetzt. Die Messung läuft analog zu oben beschriebenen Bessel-Verfahren.
 
 \subsection{Bestimmung der Brennweite eines Linsensystems nach Abbe}
-Für diesen Versuchsaufbau werden auf der optischen Bank die Halogenlampe, der Gegenstand, eine Zerstreuungslinse, eine Sammellinse und der Schirm in eben dieser Reihenfolge aufgebaut. Der Abstand zwischen den beiden Linsen muss für die gesamte Messung konstant gehalten werden. Nun wird das Linsensystem verschoben, bis ein scharfes Bild auf dem Schirm zu erkennen ist. Die Bild- und Gegenstandsweiten $b'$ und $g'$ werden zu einem Referenzpunkt $A$ gemessen. Für unsere Messungen wird der Referenzpunkt $A$ auf die Mittelebene der Sammellinse gelegt. Zusätzlich werden die Bild- und Gegenstandgrößen $B$ und $G$ gemessen. Diese Messung wird für neun weitere Gegenstandsweiten durchgeführt.
+Für diesen Versuchsaufbau werden auf der optischen Bank die Halogenlampe, der Gegenstand, eine Zerstreuungslinse, eine Sammellinse und der Schirm in eben dieser Reihenfolge aufgebaut. Der Abstand zwischen den beiden Linsen muss für die gesamte Messung konstant gehalten werden. Nun wird das Linsensystem verschoben, bis ein scharfes Bild auf dem Schirm zu erkennen ist. Die Bild- und Gegenstandsweiten $b'$ und $g'$ werden zu einem Referenzpunkt $A$ gemessen. Für die Messungen wird der Referenzpunkt $A$ auf die Mittelebene der Sammellinse gelegt. Zusätzlich werden die Bild- und Gegenstandgrößen $B$ und $G$ gemessen. Diese Messung wird für neun weitere Gegenstandsweiten durchgeführt.
