--- a/14-26.April/content/theorie.tex
+++ b/14-26.April/content/theorie.tex
@@ -73,6 +73,7 @@ ist und dass der Linsenabstand $d$ mit
 berechnet wird. Durch Einsetzen lässt sich die Brennweite der Linse zu
 \begin{equation}
 	f = \frac{e^2 - d^2}{4e}
+	\label{eqn:tbes}
 \end{equation}
 bestimmen.
 
@@ -89,9 +90,11 @@ Ein weiteres Verfahren zur Bestimmung der Brennweite ist das Abbe-Verfahren. Zus
 Aus den Gleichungen
 \begin{equation}
 	g' = g + h = f \cdot \left(1 + \frac{1}{V} \right) + h
+	\label{eqn:g'}
 \end{equation}
 und
 \begin{equation}
 	b' = b + h' = f \cdot \left(1 + V \right) + h'
+	\label{eqn:b'}
 \end{equation}
-ergeben sich dann die Brennweite $f$ und die Lage der Hauptebenen. In den beiden obenstehenden Gleichungen bedeutet $V$ den Abbildungsmaßstab und $h$ und $h'$ sind die Hilfsebenen.
+ergeben sich dann die Brennweite $f$ und die Lage der Hauptebenen. In den beiden obenstehenden Gleichungen ist $V$ der Abbildungsmaßstab und $h$ und $h'$ sind die Hilfsebenen.
