--- a/16-10.Mai/content/auswertung.tex
+++ b/16-10.Mai/content/auswertung.tex
@@ -100,7 +100,7 @@ In einem linearen Diagramm werden die Ablenkspannungen $U_\text{d}$ aus Tabelle 
   \caption{Empfindlichkeit der Braunschen Röhre}
   \label{fig:empf}
 \end{figure}
-Es wird ein Fit durch die einzelnen Messpunkte gelegt anhand derer die Empfindlichkeit der Braunschen Röhre bestimmt wird. Diese wird in einem weiterem Diagramm gegen den Kehrwert der Beschleunigungsspannung aufgetragen.
+Es wird ein Fit durch die einzelnen Messpunkte gelegt anhand derer die Empfindlichkeit der Braunschen Röhre bestimmt wird (siehe Abbildung \ref{fig:empf}). Diese wird in einem weiterem Diagramm \ref{fig:K} gegen den Kehrwert der Beschleunigungsspannung aufgetragen.
 \begin{figure}
   \centering
   \includegraphics[height=8cm]{E-Feld2.pdf}
@@ -151,7 +151,7 @@ Desweiteren soll der Schwellwert der Spannung $U_\text{B}$ werden. Da die Empfin
   U_\text{d} = \frac{D 2 d U_\text{B}}{p L} \ .
   \label{eqn:dfs}
 \end{equation}
-Für die Beschleunigungsspannung von 260 V Ergibt sich für die verschiedenen Verschiebungen $D$ auf dem Schirm die in der Tabelle \ref{tab:scheitel} aufgeführten Scheitelwerte.
+Für die Beschleunigungsspannung von 260 V ergibt sich für die verschiedenen Verschiebungen $D$ auf dem Schirm die in der Tabelle \ref{tab:scheitel} aufgeführten Scheitelwerte.
 \begin{table}
   \centering
   \begin{tabular}{c c c}
