--- a/14-26.April/content/diskussion.tex
+++ b/14-26.April/content/diskussion.tex
@@ -26,4 +26,4 @@ Die Linsengleichung scheint als bestätigt da die Werte lediglich um 3.5 \% von 
 Die Bekannte Linse wurde mit einem Messfehler von 2 \% bestimmt, was als gelungene Messung eingestuft werden kann.
 %Bei der Unbekannten Linse beträgt der Fehler 26 \%. Dabei fällt auf das wenn der Brennpunkt im Plott auf die y-Achse projeziert werden würde, dies einer Brennweite von 15 cm entsprechen würde. Da aber der Fehler bei dem Brennpunkt welcher auf  die x-Achse jedoch groß ist, kommt solch ein großer Fehler zu stande. Diesliegt womöglich daran, dass ein Bild welches rein Objektiv als scharf empfunden wird, dies nicht wirklich ist.
 Die mittels der Besselmethode bestimmte Brennweite für weißes Licht beträgt 9.7 cm. Dies entspricht einer relativen Abweichung von 3 \% von der Herstellerangabe. Des weiteren wird ermittelt das die Brechkraft der Linse bei rotem Licht geringer als die vom Blauen ist.
-Die mittels Abbemethode ermittelten Brennweiten weichen um bis zu 5 \% von dem Theorie wert ab. Mittelt man die beiden ermittelten Messwerte zuerst ist die Messunsicherheit kleiner als 1 \% .
+Die mittels Abbemethode ermittelten Brennweiten weichen um bis zu 5 \% von dem Theorie wert ab. Werden die beiden ermittelten Messwerte zuerst gemittelt, ist die Messunsicherheit kleiner als 1 \% .
