Theorie fertig gestellt

--- a/17-17.Mai/content/durchfuehrung.tex
+++ b/17-17.Mai/content/durchfuehrung.tex
@@ -1,2 +1,16 @@
 \section{Durchführung und Aufbau}
 \label{sec:Durchführung}
+
+\begin{figure}
+  \centering
+  \includegraphics[height=5cm]{picture/Aufbau.png}
+  \caption{<+caption text+>}
+  \label{fig:<+label+>}
+\end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[height=5cm]{picture/Duplet.png}
+  \caption{<+caption text+>}
+  \label{fig:<+label+>}
+\end{figure}<++>
