--- a/17-17.Mai/content/theorie.tex
+++ b/17-17.Mai/content/theorie.tex
@@ -1,7 +1,7 @@
 \section{Theoretische Grundlage}
 \label{sec:Theorie}
-Ziel des Versuches ist es die innere Abschirmungszahlen verschiedener Alalimetalle anhand derer Emissionslinien zu bestimmen. 
-Alakli-Metalle bestizen nur komplett besetzte Schalen und  ein Valenzelektronen. Diese lassen sich mit Hilfe der Ein-Elektronen-Näherung recht einfach beschreiben. Der Anatz der Näherungberuht darauf, das die Ladungen der Elektronen welche die kompletten Schalen besetzen sich mit denen, der Protonen des Kerns kompensiert. Somit kann das Atom als Wasserstoffatom genähert werden. Das zwischen dem Proton und Neutron liegende Columbfeld, wird jedoch durch die inneren Elektronen abgeschirmt. Dies wird im weiteren Verlauf der Rechnung durch die Abschirmzahl \sigma berücksichtigt. 
+Ziel des Versuches ist es die innere Abschirmungszahlen verschiedener Alkali-Metalle anhand derer Emissionslinien zu bestimmen. 
+Alakli-Metalle bestizen nur komplett besetzte Schalen und  ein Valenzelektronen. Diese lassen sich mit Hilfe der Ein-Elektronen-Näherung recht einfach beschreiben. Der Anatz der Näherungberuht darauf, das die Ladungen der Elektronen welche die kompletten Schalen besetzen sich mit denen, der Protonen des Kerns kompensiert. Somit kann das Atom als Wasserstoffatom genähert werden. Das zwischen dem Proton und Neutron liegende Columbfeld, wird jedoch durch die inneren Elektronen abgeschirmt. Dies wird im weiteren Verlauf der Rechnung durch die Abschirmzahl $\sigma$ berücksichtigt. 
 \begin{equation}
   z_\text{eff} = z - \sigma
   \label{eqn:zeff}
@@ -40,33 +40,41 @@ ergeben. Desweiteren muss die Spin-Bahn-Kopplung $S$ der Elektronen berücksicht
 \end{equation}
 wobei die Spinquantenzahl $j$ nur die Werte $l + \frac{1}{2}$ und $l - \frac{1}{2}$ annehmen kann. 
 
-Angeregte Valenzelektronen haben bei den durch die ``Quantenzahlen $n ,l$ und $j$ gekennzeichneten Energieniveaus verschiedene Übergangswahrscheinlichkeiten``.	Die entsprechende Bahndrehquantenzahl $l$ ändert sich jeweils um $\delta l$ = $\pm 1$. Darüber hinaus ist ein Übergang der Spinquantenzahl $\delta j = 0$ zwar möglich, aber sehr unwahrscheinlich. Die Hauptquantenzahl n ist nicht eingeschränkt, wird jedoch mit steigendem n immer unwahrscheinlicher. Das Phänomen das bei gleicher Bahndrehquantenzahl und unterschiedlichen Spinquantenzahlen wei Spektrallinien dicht beieinadner liegen,wird als Doublett-Struktur bezeichnet. In Abbildung \ref{fig:} ist ein Beispiel für verschiedene Energieniveaus abgebildet.
-%\begin{figure}
-%  \centering
-%  \includegraphics[height=6cm]{}
-%  \caption{<+caption text+>}
-%  \label{fig:<+label+>}
-%\end{figure}
+Angeregte Valenzelektronen haben bei den durch die ``Quantenzahlen $n ,l$ und $j$ gekennzeichneten Energieniveaus verschiedene Übergangswahrscheinlichkeiten``.	Die entsprechende Bahndrehquantenzahl $l$ ändert sich jeweils um $\delta l$ = $\pm 1$. Darüber hinaus ist ein Übergang der Spinquantenzahl $\delta j = 0$ zwar möglich, aber sehr unwahrscheinlich. Die Hauptquantenzahl n ist nicht eingeschränkt, wird jedoch mit steigendem n immer unwahrscheinlicher. Das Phänomen das bei gleicher Bahndrehquantenzahl und unterschiedlichen Spinquantenzahlen wei Spektrallinien dicht beieinadner liegen,wird als Doublett-Struktur bezeichnet. In Abbildung \ref{fig:ene} ist ein Beispiel für verschiedene Energieniveaus abgebildet.
+\begin{figure}
+  \centering
+  \includegraphics[height=6cm]{picture/eniv.png}
+  \caption{Beispiel für Energieniveaus der Spektrallinien \cite{sample}}
+  \label{fig:ene}
+\end{figure}
 
-Um Schlussendlich die Energie des Leuchtelektron genau zu bestimmen wird die Abschirmkonstante in zwei Teile eingeteilt. Einerseits in die Konstante der vollen Abschirmung $\sigma_1$ und der der inneren Abschirmung $\sigma_2$. Bei der
-
+Um Schlussendlich die Energie des Leuchtelektron genau zu bestimmen wird die Abschirmkonstante in zwei Teile eingeteilt. Einerseits in die Konstante der vollen Abschirmung $\sigma_1$ und der der inneren Abschirmung $\sigma_2$. Da die zweite Abschirmungskonstante $\sigma_2$ ausschließlich die vollbesetzten Unterschalen beschreibt unterscheidet ist diese nur geringfügig kleiner, als die volle Abschirmungskonstante $\sigma_1$ welche die Abschirmung aller Elektronen  impliziert. Als Dublett wird ein Quantenmechanischer Zustand bezeichnet bei dem sich lediglich die Quantenzahl $j$ von dem des anderen Zustandes um 1 unterscheidet. Anhand der Energiediffernz $\Delta E_\text{D}$ von Dubletts lässt sich die Abschirmungszahl $\sigma_2$ mit Gleichung \eqref{eqn:ded} bestimmen,
 \begin{equation}
   \Delta E_\text{D} = \frac{R_{infty} \alpha^2}{n^3} \left( z - \sigma_2 \right)^2 \frac{1}{l(l+1)}
-  \label{<++>}
+  \label{eqn:ded}
 \end{equation}
-
+indem die Gleichung nach der Abschirmkonstante aufgelöst wird. 
 \begin{equation}
   \Delta E_\text{D} = h_\text{c}\left( \frac{1}{\lambda} - \frac{1}{\lambda'} \right)
   \label{<++>}
 \end{equation}
-
+Um die Energiedifferenz zu bestimmen wird anhand des Wellenlängenunterschied der beiden Spektrallinien des Dubletts entsprechend der Gleichung
 \begin{equation}
-  sin \varphi = k \frac{\lambda}{g}
-  \label{}
+  \Delta E_\text{D} = hc\left( \frac{1}{\lambda} - \frac{1}{\lambda'} \right)
+  \label{eqn:ed}
 \end{equation}
-
-
-
+bestimmt. 
+Mit Hilfe der Interferenz an einem Gitter werden die Spektralien in ihre einzelnen Wellenlängen aufgespalten. Kunstruktive Interferens wird bei den Maximums $k$ter Ordung unter dem Winkel $\varphi$ beobachtet. Die Gitterkonstante wird als $g$ bezeichnet.
+\begin{equation}
+  sin \, \varphi = k \frac{\lambda}{g}
+  \label{eqn:phi}
+\end{equation}
+Für die Bestimmung der Wellenlängenunterschied der Dubletts das Okularmikrometer geeicht werden. Näheres zu dem Verfahren wird in der Durchführung erwähnt. Aus Trigonometrischen Überlegungegen ergibt sich die Formel 
+\begin{equation}
+  \delta\lambda = \frac{cos \, \varphi}{cos \, \varphi_{1,2}} \frac{\Delta s}{\Delta t}\left( \lambda_1 - \lambda_2 \right) \ .
+  \label{eqn:dlam}
+\end{equation}
+$\varphi$ entspricht dem gemittelten Winkel der Doublettlinien und $\varphi_{1,2}$ die gemittelte Differenz der Douplettlinien. $\Delta s$ ist der Abstand zwischen den beiden Doublettlinien und $\Delta t$ der, der beiden bekannten Spektrallinien $\lambda_1$ und $\lambda_2$.
 
 \subsection{Fehlerrechnung}
 Sämtliche Fehlerrechnungen werden mit Hilfe von Python 3.4.3 durchgeführt.
