Theorie und Durchführung fertiggestellt aber nicht fehler gelesen.

--- a/17-17.Mai/content/theorie.tex
+++ b/17-17.Mai/content/theorie.tex
@@ -19,7 +19,7 @@ für die sich die Lösungen
 \end{equation}
 ergeben. Dabei ist $n$ die Hauptquantenzahl. Da es sich jedoch um ein Kugelsymetrisches Problem handelt muss zunächst noch der Laplaceoperator in Kugelkoordinaten eingeführt werden. Zusätzlich wird nun beim Potetntial die Abschirmkonstante berücksichtigt, so dass sich das Potential der Form
 \begin{equation}
-  U = - \frac{\left( z - \Sigma \right) e_0^2}{4 \pi  \varepsilon_0 r}
+  U = - \frac{\left( z - \sigma \right) e_0^2}{4 \pi  \varepsilon_0 r}
   \label{schrö}
 \end{equation}
 ergibt. Die Lösung der für das an das System angepasste Schrödingergleichung wird relativistisch betrachtet und in einer Potenzreihe umgeschrieben so dass sich die Energieigenwerte
@@ -50,7 +50,7 @@ Angeregte Valenzelektronen haben bei den durch die "Quantenzahlen $n ,l$ und $j$
 
 Um Schlussendlich die Energie des Leuchtelektron genau zu bestimmen wird die Abschirmkonstante in zwei Teile eingeteilt. Einerseits in die Konstante der vollen Abschirmung $\sigma_1$ und der der inneren Abschirmung $\sigma_2$. Da die zweite Abschirmungskonstante $\sigma_2$ ausschließlich die vollbesetzten Unterschalen beschreibt unterscheidet ist diese nur geringfügig kleiner, als die volle Abschirmungskonstante $\sigma_1$ welche die Abschirmung aller Elektronen  impliziert. Als Dublett wird ein Quantenmechanischer Zustand bezeichnet bei dem sich lediglich die Quantenzahl $j$ von dem des anderen Zustandes um 1 unterscheidet. Anhand der Energiediffernz $\Delta E_\text{D}$ von Dubletts lässt sich die Abschirmungszahl $\sigma_2$ mit Gleichung \eqref{eqn:ded} bestimmen,
 \begin{equation}
-  \Delta E_\text{D} = \frac{R_{infty} \alpha^2}{n^3} \left( z - \sigma_2 \right)^2 \frac{1}{l(l+1)}
+  \Delta E_\text{D} = \frac{R_{\infty} \alpha^2}{n^3} \left( z - \sigma_2 \right)^2 \frac{1}{l(l+1)}
   \label{eqn:ded}
 \end{equation}
 indem die Gleichung nach der Abschirmkonstante aufgelöst wird. Um die Energiedifferenz zu bestimmen wird anhand des Wellenlängenunterschied der beiden Spektrallinien des Dubletts entsprechend der Gleichung
