--- a/17-17.Mai/content/auswertung.tex
+++ b/17-17.Mai/content/auswertung.tex
@@ -25,7 +25,7 @@ Die zu den gegebenen Wellenlängen $\lambda$ gemessenen Beugungswinkel $\phi$, f
   \label{tab:Mess1}
 \end{table}
 
-Die Gitterkonstante $g$ wird mit Hilfe einer linearen Regression, der Gleichung \eqref{eqn:phi} bestimmt, indem $\sin(\phi)$ gegen $\lambda$ aufgetragen wird (siehe Diagramm \eqref{fig:Gitterkonstante}). Aus der Regression ergeben sich folgende Werte:
+Die Gitterkonstante $g$ wird mit Hilfe einer linearen Regression der Gleichung \eqref{eqn:phi} bestimmt, indem $\sin(\phi)$ gegen $\lambda$ aufgetragen wird (siehe Diagramm \eqref{fig:Gitterkonstante}). Aus der Regression ergeben sich folgende Werte:
 \begin{align*}
   k & = 1 \\
   b & = (\num{-6 +- 2}) \cdot 10^{-3} \\
@@ -155,3 +155,21 @@ Dabei ist bei Natrium $n = 3$, bei Kalium $n = 4$ und bei Rubidium $n = 5$ und f
 \end{table}
 
 \subsection{Bestimmung der Distanz zwischen den Dublettlinien}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+a
